# isara-labs-pitch

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: forecasts.db
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/forecast/[id]/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/components/: agent-avatar.tsx  calibration-chart.tsx  convergence-chart.tsx  conviction-badge.tsx  debate-replay.tsx  direction-arrow.tsx  evidence-list.tsx  forecast-card.tsx  new-forecast-modal.tsx  signal-panel.tsx
frontend/src/lib/: api.ts  types.ts
scripts/: backtest.py  run_forecast.py  seed_data.py
src/: config.py  logging.py  resilience.py
src/agents/: aggregator.py  china.py  energy.py  geopolitical.py  macro.py  polling.py  quant.py  registry.py  sentiment.py  triage.py
src/agents/templates/: __init__.py  base.py
src/api/: deps.py  main.py
src/api/routes/: forecasts.py  runs.py  signals.py  ws.py
src/isara_swarm_forecaster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcp/: client.py  fred_server.py  market_server.py  news_server.py
src/orchestrator/: debate.py  multi_swarm.py  rounds.py  swarm.py
src/persistence/: database.py  memory.py
src/signals/: __init__.py  aggregation.py  calibration.py  schema.py
src/tools/: calendar.py  economic_indicators.py  market_data.py  news.py  sentiment.py
tests/test_orchestrator/: test_convergence.py
tests/test_persistence/: test_database.py
tests/test_signals/: test_aggregation.py  test_schema.py
